# CVAI-Homework

./: CVAI_Projekt_Photogrammetrie_Evaluation.md  README.md  docker-compose.yml  scanner.sh
streamlit-dashboard/: Dockerfile  main.py  pyproject.toml  requirements.txt
